HelloUltraviolet/Fixtures/RejectedSource/SourceText/MalformedNumericLiteral/Source/Main.uv
//! Rejected lexical specimen for a malformed numeric literal.

public procedure malformedNumericLiteralReference() -> i32 {
    return 1_
}
